Plugin Name: Custom Sidebars Pro
Author: Javier Marquez (Incsub), Philipp Stracker (Incsub)

Change Log:
----------------------------------------------------------------------

2.0.9.8
----------------------------------------------------------------------
- Fix: Membership levels are recognized correctly by Visibility module.

2.0.9.7
----------------------------------------------------------------------
- New: WPML support to translate name/description of custom- and theme-sidebars!
- New: A column in the post-list shows the assigned custom sidebars.
- New: Assign Custom Sidebars to a post via the Quick-Edit form.
- New: Assign a Sidebar to a specific Author via the Sidebar Location dialog.
- New: Assign a Sidebar to 404 pages via the Sidebar Location dialog.
- New: Sidebars can be sorted and filtered by title.
- Improved loading performance of the Widgets screen.

2.0.9.6
----------------------------------------------------------------------
- Fix: When adding new widgets they are not linked anymore (not "clones")
- Fix: In some browsers the "Add sidebar" popup was partially hidden.
- Fix: Sometimes the dropdown list of a multiselect list stayed open.
- Fix: Plugin now correctly loads the .po files to translate to other languages.
- Some other small improvements.

2.0.9.5
----------------------------------------------------------------------
- Fix: PHP error "WDev" undefined that appeared in 2.0.9.4

2.0.9.4
----------------------------------------------------------------------
- Fix: For some users the plugin was not loading anymore after updating to 2.0.9.1.

2.0.9.3
----------------------------------------------------------------------
- Fix: Z-index issue in Dashboard where wide widgets where covered by the main-menu.
- Fix: Added compatibility for static front-page sidebars with version 2.0.9

2.0.9.2
----------------------------------------------------------------------
- Fix: Sidebar Locations "Front Page" and "Post Index" now work correctly.

2.0.9.1