@@ -1,1 +1,1 @@
-#defaultsidebarspage p.submit{padding:0 0 10px;clear:both}#poststuff.defaultsdetailscontainer h2{border-bottom:0;margin-bottom:5px}#defaultsforposts,#defaultsforpages{padding:0 10px;background:#fcfcfc;overflow:hidden}.defaultsSelector{margin-bottom:30px}.cscolright{clear:right;float:right;margin:0;overflow:hidden;padding:0;width:49%}.cscolleft{margin:0;overflow:hidden;padding:0;width:49%}.widgets-php .widget-liquid-left{width:100%}.widget-liquid-right{position:fixed;background:#E4E4E4;right:0;top:0;height:auto;padding:32px 0 0;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.widgets-php #wpcontent,.widgets-php #wpfooter{margin-right:59%;position:relative}.widgets-php #widgets-left{margin-right:0 !important}.widgets-php #footer{background:#fff;margin-right:0px;padding-right:20px}.widgets-php .wrap h2{margin-bottom:10px}.widget-liquid-right .scrollbar{position:relative;float:right;width:10px;z-index:10}.widget-liquid-right .track{height:100%;width:10px;position:relative;padding:0 1px}.widget-liquid-right .thumb{height:20px;width:10px;cursor:pointer;overflow:hidden;position:absolute;top:0;background-color:#666;margin-top:10px}.widget-liquid-right .thumb .end{overflow:hidden;height:5px;width:13px}.widget-liquid-right .viewport{position:relative;margin-right:20px}.widget-liquid-right .overview{list-style:none;position:absolute;left:0;top:0;width:auto;right:0;padding-left:20px;border-left:1px solid #DDD}.disable .thumb{cursor:default;background:#ccc}#cs-options .cs-action{line-height:26px;margin-right:20px}#cs-options .cs-filter{float:right}.sidebar-form{margin:0 15px}.sidebar-form label{display:block}.sidebar-form .submit{text-align:right;margin:0;padding:1em 0}.sidebar-form .description{margin-top:5px;text-align:right}.sidebar_name,.sidebar_description{width:100%}div#widgets-right .sidebar-name>h3{padding:15px}div#widgets-right .widgets-sortables .sidebar-name>h3{padding:15px 7px}.widgets-holder-wrap.closed>div:nth-child(2){display:none}#defaultsidebarspage .hndle{cursor:pointer}#customsidebarspage #col-right{width:62%}.widgets_access .widget-liquid-right{position:static}#oldbrowsererror{display:none}#defaultsidebarspage .postbox{position:static}#defaultsidebarspage .inside{position:static}body.appearance_page_customsidebars .wrap h2{float:none}body.appearance_page_customsidebars #poststuff h2{margin-top:0}.widget.ui-draggable-dragging{z-index:10001 !important}.csb-more-content{display:none}.csb-has-more .csb-more-content{display:block}#cs-widgets-extra{display:none}#cs-title-options{zoom:1;background:#E8E8E8;margin:0 -20px 0 -20px;padding:10px 20px 20px;border-bottom:1px solid #DDD}.cs-title h3{font-weight:100}.cs-title h3 .cs-icon{margin-left:10px;color:#999}.replaceable{position:relative}.replaceable .replace-marker{position:absolute;left:0;top:0;bottom:0;width:5px;margin:0 5px 0 0;border-left:2px solid #05c944;z-index:10}.replaceable .replace-marker:hover:before{content:attr(data-label);background:#333;color:#EEE;font-size:13px;white-space:nowrap;padding:5px;position:absolute;top:7px;right:13px;line-height:20px}.replaceable .replace-marker:hover:after{content:'';position:absolute;top:16px;right:3px;border:6px solid transparent;border-left-color:#333}.cs-message{margin:.5em 0;padding:10px;position:absolute;left:0;right:0;box-shadow:0 1px 10px rgba(0,0,0,0.2);z-index:100}.cs-message .close{position:absolute;top:.5em;right:.5em;opacity:.3;color:#000;cursor:pointer;text-decoration:none;font-size:14px;line-height:26px;width:26px;text-align:center;background:rgba(0,0,0,0.1)}.cs-message .close:hover,.cs-message .close:focus,.cs-message .close:active{opacity:1}.cs-update{background:lightYellow;border:1px solid #E6DB55}.cs-error{background:#FFEBE8;border:1px solid #C00}.cs-toolbar{color:#333;padding:0;background:#FCFCFC;border-top:1px solid #E5E5E5}.cs-toolbar:after{display:table;content:'';clear:both}.closed .cs-toolbar{display:none}.cs-toolbar .cs-tool{text-decoration:none;line-height:40px;height:40px;padding:0 10px;white-space:nowrap;background:#FFF;position:relative;overflow:hidden}.cs-toolbar .dashicons{line-height:40px}.cs-toolbar .cs-separator{border-left:1px solid #E5E5E5;width:1px;padding:0;margin:0;height:40px;overflow:hidden;display:inline-block;color:#DDD}.cs-custom-sidebar .cs-tool,.cs-custom-sidebar .cs-separator{float:right}.cs-theme-sidebar .cs-tool,.cs-theme-sidebar .cs-separator{float:left}.cs-toolbar .delete-sidebar{color:#A00}.cs-toolbar .delete-sidebar:hover,.cs-toolbar .delete-sidebar:focus,.cs-toolbar .delete-sidebar:active{color:#F00}.cs-toolbar .cs-tool.btn-replaceable{color:#555;padding-left:32px}.cs-toolbar .cs-tool.btn-replaceable:hover{color:#333 !important}.cs-toolbar .cs-tool.btn-replaceable .chk-replaceable{position:absolute;top:50%;left:10px;height:16px;margin-top:-8px}.replaceable .cs-toolbar .cs-tool.btn-replaceable{background:#edfff3;color:#333}.replace-tip-box{float:left}.replace-tip{width:200px}.csb .button{outline:0}.csb .button>.dashicons,.csb .button-primary>.dashicons,.csb .button-secondary>.dashicons{opacity:.75;line-height:26px;margin-right:5px;-webkit-transition:opacity .2s;-moz-transition:opacity .2s;-o-transition:opacity .2s;transition:opacity .2s}.csb .button:hover>.dashicons,.csb .button-primary:hover>.dashicons,.csb .button-secondary:hover>.dashicons{opacity:1}.rtl div.widget-liquid-right{float:left;right:auto;left:0}.rtl.widgets-php #widgets-left{margin-left:0 !important}.rtl.widgets-php #wpcontent,.rtl.widgets-php #wpfooter{margin-left:325px;margin-right:165px}.rtl.widgets-php.folded #wpcontent,.rtl.widgets-php.folded #wpfooter{margin-left:325px;margin-right:52px}.rtl #cs-title-options h2{float:right;margin-right:5px}.rtl .widget-liquid-right .viewport{margin-right:5px;margin-left:14px}.rtl .widget-liquid-right .scrollbar{float:left}.rtl .cs-options{text-align:left}.rtl .sidebar-form .submit{text-align:left}.rtl #TB_ajaxWindowTitle{float:right}.rtl #TB_closeAjaxWindow{float:left}.csb-export-head{min-width:450px}.csb-export-head th{vertical-align:top;text-align:right;color:#679;width:150px}.csb-export-head tr:hover{background:#FAFAFA}.csb-export-head ul{margin:0}.csb-export-head .dashicons.hint{font-size:12px;line-height:22px}.csb-form{padding-left:15px}.csb-form h2,.csb-form h3,.csb-form .form-buttons,#poststuff .csb-form h2,#poststuff .csb-form h3,#poststuff .csb-form .form-buttons{padding-left:0;margin-left:-15px}.form-buttons{clear:both}.show-infos{position:relative;display:inline-block;margin:0 5px}h2 .show-infos{top:4px}.show-infos .export-infos{position:absolute;top:-5px;left:30px;font-size:13px;line-height:1.4em;font-weight:normal;background:#FFF;box-shadow:0 1px 8px rgba(0,0,0,0.2);border:3px solid #FAFAFA;padding:5px;z-index:10}.show-infos .export-infos:before,.show-infos .export-infos:after{content:'';position:absolute;left:-17px;top:5px;border:7px solid transparent;border-right-color:#FAFAFA;z-index:1}.show-infos .export-infos:after{left:-18px;top:5px;border-right-color:rgba(0,0,0,0.15);z-index:0}.show-infos:hover .export-infos{display:block !important}.export-infos .section{font-weight:bold;margin:10px 0 5px -2px;color:#666}.cs-half{float:left;width:49%;margin-right:1%}.cs-replaceable{margin-bottom:5px}.cs-replaceable>.details{display:none;margin:5px 0}.cs-replaceable.open>.details{display:block}#wpbody-content .wp-list-table .column-cs_replacement{width:300px;overflow:hidden}#wpbody-content .wp-list-table td.cs_replacement .def,#wpbody-content .wp-list-table td.cs_replacement .cust{opacity:.8;cursor:default}#wpbody-content .wp-list-table td.cs_replacement .def:after,#wpbody-content .wp-list-table td.cs_replacement .cust:after{content:' ';display:block;clear:both}#wpbody-content .wp-list-table td.cs_replacement .def:hover,#wpbody-content .wp-list-table td.cs_replacement .cust:hover{opacity:1;background:rgba(0,0,0,0.02)}#wpbody-content .wp-list-table td.cs_replacement .def{display:none}#wpbody-content .wp-list-table td.cs_replacement .cs-val,#wpbody-content .wp-list-table td.cs_replacement .cs-key{white-space:nowrap;text-overflow:ellipsis;overflow:hidden;float:left}#wpbody-content .wp-list-table td.cs_replacement .cs-key{width:100px;padding-right:10px;color:#666}#wpbody-content .wp-list-table td.cs_replacement .cs-val{width:190px}#wpbody-content .wp-list-table .inline-edit-row fieldset.cs-quickedit{border-top:1px solid #EEE;margin-top:10px;padding-top:10px}#wpbody-content .wp-list-table .inline-edit-row fieldset.cs-quickedit label span.title{display:block;float:left;min-width:5em;white-space:nowrap;padding-right:10px;width:auto}#wpbody-content .wp-list-table .inline-edit-row-page .inline-edit-col-right{float:right}
+#defaultsidebarspage p.submit{padding:0 0 10px;clear:both}#poststuff.defaultsdetailscontainer h2{border-bottom:0;margin-bottom:5px}#defaultsforposts,#defaultsforpages{padding:0 10px;background:#fcfcfc;overflow:hidden}.defaultsSelector{margin-bottom:30px}.cscolright{clear:right;float:right;margin:0;overflow:hidden;padding:0;width:49%}.cscolleft{margin:0;overflow:hidden;padding:0;width:49%}.widgets-php .widget-liquid-left{width:100%}.widget-liquid-right{position:fixed;background:#E4E4E4;right:0;top:0;height:auto;padding:32px 0 0;z-index:9999;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none}.widgets-php #wpcontent,.widgets-php #wpfooter{margin-right:59%;position:relative}.widgets-php #widgets-left{margin-right:0 !important}.widgets-php #footer{background:#fff;margin-right:0px;padding-right:20px}.widgets-php .wrap h2{margin-bottom:10px}.widget-liquid-right .scrollbar{position:relative;float:right;width:10px;z-index:10}.widget-liquid-right .track{height:100%;width:10px;position:relative;padding:0 1px}.widget-liquid-right .thumb{height:20px;width:10px;cursor:pointer;overflow:hidden;position:absolute;top:0;background-color:#666;margin-top:10px}.widget-liquid-right .thumb .end{overflow:hidden;height:5px;width:13px}.widget-liquid-right .viewport{position:relative;margin-right:20px}.widget-liquid-right .overview{list-style:none;position:absolute;left:0;top:0;width:auto;right:0;padding-left:20px;border-left:1px solid #DDD}.disable .thumb{cursor:default;background:#ccc}#cs-options .cs-action{line-height:26px;margin-right:20px}#cs-options .cs-filter{float:right}.sidebar-form{margin:0 15px}.sidebar-form label{display:block}.sidebar-form .submit{text-align:right;margin:0;padding:1em 0}.sidebar-form .description{margin-top:5px;text-align:right}.sidebar_name,.sidebar_description{width:100%}div#widgets-right .sidebar-name>h3{padding:15px}div#widgets-right .widgets-sortables .sidebar-name>h3{padding:15px 7px}.widgets-holder-wrap.closed>div:nth-child(2){display:none}#defaultsidebarspage .hndle{cursor:pointer}#customsidebarspage #col-right{width:62%}.widgets_access .widget-liquid-right{position:static}#oldbrowsererror{display:none}#defaultsidebarspage .postbox{position:static}#defaultsidebarspage .inside{position:static}body.appearance_page_customsidebars .wrap h2{float:none}body.appearance_page_customsidebars #poststuff h2{margin-top:0}.widget.ui-draggable-dragging{z-index:10001 !important}.csb-more-content{display:none}.csb-has-more .csb-more-content{display:block}#cs-widgets-extra{display:none}#cs-title-options{zoom:1;background:#E8E8E8;margin:0 -20px 0 -20px;padding:10px 20px 20px;border-bottom:1px solid #DDD}.cs-title h3{font-weight:100}.cs-title h3 .cs-icon{margin-left:10px;color:#999}.replaceable{position:relative}.replaceable .replace-marker{position:absolute;left:0;top:0;bottom:0;width:5px;margin:0 5px 0 0;border-left:2px solid #05c944;z-index:10}.replaceable .replace-marker:hover:before{content:attr(data-label);background:#333;color:#EEE;font-size:13px;white-space:nowrap;padding:5px;position:absolute;top:7px;right:13px;line-height:20px}.replaceable .replace-marker:hover:after{content:'';position:absolute;top:16px;right:3px;border:6px solid transparent;border-left-color:#333}.cs-message{margin:.5em 0;padding:10px;position:absolute;left:0;right:0;box-shadow:0 1px 10px rgba(0,0,0,0.2);z-index:100}.cs-message .close{position:absolute;top:.5em;right:.5em;opacity:.3;color:#000;cursor:pointer;text-decoration:none;font-size:14px;line-height:26px;width:26px;text-align:center;background:rgba(0,0,0,0.1)}.cs-message .close:hover,.cs-message .close:focus,.cs-message .close:active{opacity:1}.cs-update{background:lightYellow;border:1px solid #E6DB55}.cs-error{background:#FFEBE8;border:1px solid #C00}.cs-toolbar{color:#333;padding:0;background:#FCFCFC;border-top:1px solid #E5E5E5}.cs-toolbar:after{display:table;content:'';clear:both}.closed .cs-toolbar{display:none}.cs-toolbar .cs-tool{text-decoration:none;line-height:40px;height:40px;padding:0 10px;white-space:nowrap;background:#FFF;position:relative;overflow:hidden}.cs-toolbar .dashicons{line-height:40px}.cs-toolbar .cs-separator{border-left:1px solid #E5E5E5;width:1px;padding:0;margin:0;height:40px;overflow:hidden;display:inline-block;color:#DDD}.cs-custom-sidebar .cs-tool,.cs-custom-sidebar .cs-separator{float:right}.cs-theme-sidebar .cs-tool,.cs-theme-sidebar .cs-separator{float:left}.cs-toolbar .delete-sidebar{color:#A00}.cs-toolbar .delete-sidebar:hover,.cs-toolbar .delete-sidebar:focus,.cs-toolbar .delete-sidebar:active{color:#F00}.cs-toolbar .cs-tool.btn-replaceable{color:#555;padding-left:32px}.cs-toolbar .cs-tool.btn-replaceable:hover{color:#333 !important}.cs-toolbar .cs-tool.btn-replaceable .chk-replaceable{position:absolute;top:50%;left:10px;height:16px;margin-top:-8px}.replaceable .cs-toolbar .cs-tool.btn-replaceable{background:#edfff3;color:#333}.replace-tip-box{float:left}.replace-tip{width:200px}.csb .button{outline:0}.csb .button>.dashicons,.csb .button-primary>.dashicons,.csb .button-secondary>.dashicons{opacity:.75;line-height:26px;margin-right:5px;-webkit-transition:opacity .2s;-moz-transition:opacity .2s;-o-transition:opacity .2s;transition:opacity .2s}.csb .button:hover>.dashicons,.csb .button-primary:hover>.dashicons,.csb .button-secondary:hover>.dashicons{opacity:1}.rtl div.widget-liquid-right{float:left;right:auto;left:0}.rtl.widgets-php #widgets-left{margin-left:0 !important}.rtl.widgets-php #wpcontent,.rtl.widgets-php #wpfooter{margin-left:325px;margin-right:165px}.rtl.widgets-php.folded #wpcontent,.rtl.widgets-php.folded #wpfooter{margin-left:325px;margin-right:52px}.rtl #cs-title-options h2{float:right;margin-right:5px}.rtl .widget-liquid-right .viewport{margin-right:5px;margin-left:14px}.rtl .widget-liquid-right .scrollbar{float:left}.rtl .cs-options{text-align:left}.rtl .sidebar-form .submit{text-align:left}.rtl #TB_ajaxWindowTitle{float:right}.rtl #TB_closeAjaxWindow{float:left}.csb-export-head{min-width:450px}.csb-export-head th{vertical-align:top;text-align:right;color:#679;width:150px}.csb-export-head tr:hover{background:#FAFAFA}.csb-export-head ul{margin:0}.csb-export-head .dashicons.hint{font-size:12px;line-height:22px}.csb-form{padding-left:15px}.csb-form h2,.csb-form h3,.csb-form .form-buttons,#poststuff .csb-form h2,#poststuff .csb-form h3,#poststuff .csb-form .form-buttons{padding-left:0;margin-left:-15px}.form-buttons{clear:both}.show-infos{position:relative;display:inline-block;margin:0 5px}h2 .show-infos{top:4px}.show-infos .export-infos{position:absolute;top:-5px;left:30px;font-size:13px;line-height:1.4em;font-weight:normal;background:#FFF;box-shadow:0 1px 8px rgba(0,0,0,0.2);border:3px solid #FAFAFA;padding:5px;z-index:10}.show-infos .export-infos:before,.show-infos .export-infos:after{content:'';position:absolute;left:-17px;top:5px;border:7px solid transparent;border-right-color:#FAFAFA;z-index:1}.show-infos .export-infos:after{left:-18px;top:5px;border-right-color:rgba(0,0,0,0.15);z-index:0}.show-infos:hover .export-infos{display:block !important}.export-infos .section{font-weight:bold;margin:10px 0 5px -2px;color:#666}.cs-half{float:left;width:49%;margin-right:1%}.cs-replaceable{margin-bottom:5px}.cs-replaceable>.details{display:none;margin:5px 0}.cs-replaceable.open>.details{display:block}#wpbody-content .wp-list-table .column-cs_replacement{width:30%}@media screen and (max-width: 782px){#wpbody-content .wp-list-table.fixed .column-cs_replacement{display:none}}#wpbody-content .wp-list-table td.cs_replacement .def,#wpbody-content .wp-list-table td.cs_replacement .cust{opacity:.8;cursor:default;position:relative;padding-left:110px}#wpbody-content .wp-list-table td.cs_replacement .def:after,#wpbody-content .wp-list-table td.cs_replacement .cust:after{content:' ';display:block;clear:both}#wpbody-content .wp-list-table td.cs_replacement .def:hover,#wpbody-content .wp-list-table td.cs_replacement .cust:hover{opacity:1;background:rgba(0,0,0,0.02)}#wpbody-content .wp-list-table td.cs_replacement .def{display:none}#wpbody-content .wp-list-table td.cs_replacement .cs-val,#wpbody-content .wp-list-table td.cs_replacement .cs-key{white-space:nowrap;text-overflow:ellipsis;overflow:hidden}#wpbody-content .wp-list-table td.cs_replacement .cs-key{max-width:100px;color:#666;position:absolute;left:0}#wpbody-content .wp-list-table td.cs_replacement .cs-val{display:block}#wpbody-content .wp-list-table .inline-edit-row fieldset.cs-quickedit{border-top:1px solid #EEE;margin-top:10px;padding-top:10px}#wpbody-content .wp-list-table .inline-edit-row fieldset.cs-quickedit label span.title{display:block;float:left;min-width:5em;white-space:nowrap;padding-right:10px;width:auto}#wpbody-content .wp-list-table .inline-edit-row-page .inline-edit-col-right{float:right}
